[package]
name = "zome_signals"
version = "0.1.0"
rust-version = "1.70.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
non_upper_case_globals = "allow"
unused_doc_comments = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
unused_attributes = "allow"

[dependencies]
serde = { version = "=1.0.203", default-features = false }
hdk = { version = "=0.4.0-rc.1", default-features = false }

## Broken hdk deps
#hdk_derive = { version = "=0.4.0-dev.12", default-features = false }
#holochain_integrity_types = "=0.4.0-dev.12"


